# ispcr

./: .cruft.json  .gitignore  404.html  CHANGELOG.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
api_docs/: index.html
changelog/: index.html
docs/: api_docs.md
search/: search_index.json
src/ispcr/: FastaSequence.py  __init__.py  errors.py  utils.py
tests/: test_FastaSequence.py  test_Product_functions.py  test_headers.py  test_output_files.py  test_utils.py
tests/test_data/primers/: test_primers_1.fa
tests/test_data/sequences/: met_r.fa.fasta  single_test.fa  small_sequence.fa
